# Simple_Caro

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
cli_framework/: cli_graphic_inc.h  test.cpp
cli_tool/caro_cli/: cli_graphic.h
cpp/: Game_Context.h  Game_Judge.h  Simple_Caro.h  common.h  example  example.cpp
cpp/example/: example.cpp
cpp/lib/simple_caro/: Game_Context.h  Game_Judge.h  Simple_Caro.h  common.h
cpp/single_include/: Simple_Caro.h
cpp/wrapper/: Makefile  Simple_Caro_wrapper.cpp  Simple_Caro_wrapper.h
example/: Makefile  example.cpp
simple_caro/include/: board_context.hpp  defines.hpp  game_judge.hpp  player_context.hpp  ruling.hpp  simple_caro.hpp  utils.hpp
simple_caro/src/: board_context.cpp  game_judge.cpp  player_context.cpp  ruling.cpp  simple_caro.cpp  utils.cpp
single_include/: Simple_Caro.h
wrapper/: Makefile  Simple_Caro_wrapper.cpp  Simple_Caro_wrapper.h
wrapper/simple_caro/: game_judge.hpp  simple_caro.hpp
